--- a/shenqi28.html
+++ b/shenqi28.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <a href="https://teqpromo.uztoh.com/join/MFg4nmKN"
+        <a href="https://teqpromo.uzto/MFg4nmKN"
           ><img
           style="width: 100%; height: auto"src="jpg/01.jpg"alt=""0"/></a> 
        
