--- a/shenqi28.html
+++ b/shenqi28.html
@@ -8,25 +8,22 @@
 </head>
 <body>
     <div>
-        <a href="https://teqpromo.uzto/MFg4nmKN"
+        <a href="https://teqpromo.uztoh.com/join/24M6K823"
           ><img
           style="width: 100%; height: auto"src="jpg/01.jpg"alt=""0"/></a> 
        
         <h2>🇨🇦28圈APP业界顶尖平台🇨🇦</h2>
             <p><em>点~击~图~片~跳~转~注~册</em></p>
         <h3>💥零鲨鱼、信誉，实力平台、担保全额账单💥</h3>
-        <b>公平、公正、安全、信誉为服务宗旨！超低门槛会员活动，超高流水返点福利待遇<br />
         <span style="color: #f51f17"><strong>诚招代理、上级稳定永不失联、茶水红包、团队待遇好做你指路明灯</span></strong><br />
-            <p><b><span style="color: #1c200a46">⭐️不干怎么住别墅 不干怎么睡嫩模⭐️</span></b></p>
+        <p><b><span style="color: #1c200a46">⭐️不干怎么住别墅 不干怎么睡嫩模⭐️</span></b></p>
         <b>张三不干李四干，张三赚李四叹！</b>
         <b>早加入早赚钱！</b>
-            <p><b><strong>旺旺聊天：</strong><span style="color: #f51f17">653761</span></b></p>
-            <b>旺旺聊天下载：www.wangwangabc.com</b></P>  
-          </p>
-          <p>更多丰富的活动详情请前往APP主界面-优惠查看，如有任何疑问请及时咨询在线客服为您解答；</p><p>28圈致力为您打造优质、高效的娱乐平台，请持续关注28圈。</p></p>
-          <span style="color: #f70637"
-          <p>认准神奇旺旺号：653761</p>
-          <b>相信品牌的力量！专业、信誉、无忧娱乐!</span></b>
+        <p><b><strong>旺旺聊天：</strong><span style="color: #f51f17">653761</span></b></p>
+        <b>旺旺聊天下载：www.wangwangabc.com</b></P>
+        <span style="color: #f70637"
+        <p>认准神奇旺旺号：653761</p>
+         <b>相信品牌的力量！专业、信誉、无忧娱乐!</span></b>
         </div>
       </body>
     </html>
