--- a/shenqi28.html
+++ b/shenqi28.html
@@ -12,17 +12,19 @@
           ><img
           style="width: 100%; height: auto"src="jpg/01.jpg"alt=""0"/></a> 
        
-        <h2>🇨🇦28圈APP业界顶尖平台🇨🇦</h2>
-            <p><em>点~击~图~片~跳~转~注~册</em></p>
+        <h2>🇨🇦28圈APP业界顶尖平台诚招代理🇨🇦</h2>
+        <p><em>点~击~图~片~跳~转~注~册</em></p>
+        <h5>⚽️体育游戏、🏅电竞游戏、👸🏻真人视讯、🀄️电子游艺、♠️棋牌游戏、🧜🏻‍♀️捕鱼游戏、💲哈希游戏</h5>
+        <p><b>⭐️多款游戏，不同体验，总有一款适合您！</b></p>
         <h3>💥零鲨鱼、信誉，实力平台、担保全额账单💥</h3>
-        <span style="color: #f51f17"><strong>诚招代理、上级稳定永不失联、茶水红包、团队待遇好做你指路明灯</span></strong><br />
+        <span style="color: #f51f17"><strong>诚招代理、上级稳定永不失联、团队待遇好做你指路明灯</span></strong><br />
         <p><b><span style="color: #1c200a46">⭐️不干怎么住别墅 不干怎么睡嫩模⭐️</span></b></p>
         <b>张三不干李四干，张三赚李四叹！</b>
         <b>早加入早赚钱！</b>
         <p><b><strong>旺旺聊天：</strong><span style="color: #f51f17">653761</span></b></p>
         <b>旺旺聊天下载：www.wangwangabc.com</b></P>
         <span style="color: #f70637"
-        <p>认准神奇旺旺号：653761</p>
+        <p><b>认准神奇旺旺号：653761</b></p>
          <b>相信品牌的力量！专业、信誉、无忧娱乐!</span></b>
         </div>
       </body>
