--- a/shenqi28.html
+++ b/shenqi28.html
@@ -14,7 +14,7 @@
        
         <h2>🇨🇦28圈APP业界顶尖平台诚招代理🇨🇦</h2>
         <p><em>点~击~图~片~跳~转~注~册</em></p>
-        <h5>⚽️体育游戏、🏅电竞游戏、👸🏻真人视讯、🀄️电子游艺、♠️棋牌游戏、🧜🏻‍♀️捕鱼游戏、💲哈希游戏</h5>
+        <h5>🇨🇦加拿大28🇨🇦、⚽️体育游戏⚽️、🏅电竞游戏🏅、👸🏻真人视讯👸、🀄️电子游艺🀄️、♠️棋牌游戏♠️、🧜🏻‍♀️捕鱼游戏🧜、💲哈希游戏💲</h5>
         <p><b>⭐️多款游戏，不同体验，总有一款适合您！</b></p>
         <h3>💥零鲨鱼、信誉，实力平台、担保全额账单💥</h3>
         <span style="color: #f51f17"><strong>诚招代理、上级稳定永不失联、团队待遇好做你指路明灯</span></strong><br />
