--- a/shenqi28.html
+++ b/shenqi28.html
@@ -12,7 +12,7 @@
           ><img
           style="width: 100%; height: auto"src="jpg/01.jpg"alt=""0"/></a> 
        
-        <h2>🇨🇦28圈APP业界顶尖平台诚招代理🇨🇦</h2>
+        <h2>🇨🇦28圈业界顶尖平台诚招代理🇨🇦</h2>
         <p><em>点~击~图~片~跳~转~注~册</em></p>
         <h5>🇨🇦加拿大28🇨🇦、⚽️体育游戏⚽️、🏅电竞游戏🏅、👸🏻真人视讯👸、🀄️电子游艺🀄️、♠️棋牌游戏♠️、🧜🏻‍♀️捕鱼游戏🧜、💲哈希游戏💲</h5>
         <p><b>⭐️多款游戏，不同体验，总有一款适合您！</b></p>
