--- a/shenqi28.html
+++ b/shenqi28.html
@@ -19,8 +19,7 @@
         <h3>💥零鲨鱼、信誉，实力平台、担保全额账单💥</h3>
         <span style="color: #f51f17"><strong>诚招代理、上级稳定永不失联、团队待遇好做你指路明灯</span></strong><br />
         <p><b><span style="color: #1c200a46">⭐️不干怎么住别墅 不干怎么睡嫩模⭐️</span></b></p>
-        <b>张三不干李四干，张三赚李四叹！</b>
-        <b>早加入早赚钱！</b>
+        <p><span data-toggle="lightbox" data-gallery="entry-gallery"><img src="http://xkbcw.lol/upload/attach/202207/1_FU2E9ES3E3HCVYY.gif" width="48" height="53" style="border: 1px solid rgb(222, 226, 230); margin-bottom: 0.5rem; height: auto !important;"><span style="background-color: rgb(242, 0, 255);">张三不干李四干，张三赚李四叹！&nbsp;<span data-toggle="lightbox" data-gallery="entry-gallery" style="font-weight: bolder;">早加入早赚钱！<img src="http://xkbcw.lol/upload/attach/202207/1_RV5EWA765SCTW3M.gif" width="48" height="53" style="border: 1px solid rgb(222, 226, 230); margin-bottom: 0.5rem; height: auto !important;"></span></span></span></P>
         <p><b><strong>旺旺聊天：</strong><span style="color: #f51f17">653761</span></b></p>
         <b>旺旺聊天下载：www.wangwangabc.com</b></P>
         <span style="color: #f70637"
