--- a/shenqi28.html
+++ b/shenqi28.html
@@ -10,14 +10,14 @@
   <div style="width: auto;      height: 180px;/* 01.jpg */      background: url(https://dlglq.github.io/0450.gif) no-repeat center top;	  	  " id="partner2"><br><br><br></div>
 
 
-</a><div class="content" style="/* 图片2 */	  background: url(https://dlglq.github.io/044475.png) no-repeat;	  background-size:100% 100%;	  "><a href="https://28q09.com/pc/index.html">
+</a><div class="content" style="/* 图片2 */	  background: url(https://dlglq.github.io/044475.png) no-repeat;	  background-size:100% 100%;	  "><a href="https://teqpromo.uztoh.com/join/24M6K823">
 <!-- 图片3 --> <img style="height:351.06px;" src="https://dlglq.github.io/0460.gif" width="100%"> </a> </div>
 
   <div>
-        <a href="https://teqpromo.uztoh.com/join/MFg4nmKN"
+        <a href="https://teqpromo.uztoh.com/join/24M6K823"
           ><img
           style="width: 100%; height: auto"src="jpg/01.jpg"alt=""0"/></a> 
-          <span data-toggle="lightbox" data-gallery="entry-gallery"><img src="http://xkbcw.lol/upload/attach/202207/1_FU2E9ES3E3HCVYY.gif" width="48" height="53" style="border: 1px solid rgb(222, 226, 230); margin-bottom: 0.5rem; height: auto !important;"></span><b>早加入、早赚钱、心动不如行动！</b><span data-toggle="lightbox" data-gallery="entry-gallery"><img src="http://xkbcw.lol/upload/attach/202207/1_FU2E9ES3E3HCVYY.gif" width="48" height="53" style="border: 1px solid rgb(222, 226, 230); margin-bottom: 0.5rem; height: auto !important;"></span>
+          <span data-toggle="lightbox" data-gallery="entry-gallery"><img src="https://dlglq.github.io/0470.gif" width="48" height="53" style="border: 1px solid rgb(222, 226, 230); margin-bottom: 0.5rem; height: auto !important;"></span><b>早加入、早赚钱、心动不如行动！</b><span data-toggle="lightbox" data-gallery="entry-gallery"><img src="https://dlglq.github.io/0470.gif" width="48" height="53" style="border: 1px solid rgb(222, 226, 230); margin-bottom: 0.5rem; height: auto !important;"></span>
         <h2>🇨🇦28圈APP业界顶尖平台🇨🇦</h2>
         
 
