--- a/shenqi28.html
+++ b/shenqi28.html
@@ -7,22 +7,21 @@
     <title>28圈诚招代理</title>
 </head>
 <body>
-  <div style="width: auto;      height: 180px;/* 01.jpg */      background: url(https://dlglq.github.io/0450.gif) no-repeat center top;	  	  " id="partner2"><br><br><br></div>
-
+</a><div class="content" style="/* 图片2 */	  background: url(https://dlglq.github.io/0450.gif) no-repeat;	  background-size:100% 100%;	  "><a href="https://28q09.com/pc/index.html">
+  <!-- 图片3 --> <img style="height: 65px;;" src="https://dlglq.github.io/0450.gif" width="100%"> </a> </div>
 
 </a><div class="content" style="/* 图片2 */	  background: url(https://dlglq.github.io/044475.png) no-repeat;	  background-size:100% 100%;	  "><a href="https://28q09.com/pc/index.html">
-<!-- 图片3 --> <img style="height:70px;" src="https://dlglq.github.io/0460.gif" width="100%"> </a> </div>
+<!-- 图片3 --> <img style="height: 70px;;" src="https://dlglq.github.io/0460.gif" width="100%"> </a> </div>
 
   <div>
-        <a href="https://teqpromo.uztoh.com/join/MFg4nmKN"
+        <a href="https://teqpromo.uztoh.com/join/24M6K823"
           ><img
           style="width: 100%; height: auto"src="jpg/01.jpg"alt=""0"/></a> 
           <span data-toggle="lightbox" data-gallery="entry-gallery"><img src="http://xkbcw.lol/upload/attach/202207/1_FU2E9ES3E3HCVYY.gif" width="48" height="53" style="border: 1px solid rgb(222, 226, 230); margin-bottom: 0.5rem; height: auto !important;"></span><b>早加入、早赚钱、心动不如行动！</b><span data-toggle="lightbox" data-gallery="entry-gallery"><img src="http://xkbcw.lol/upload/attach/202207/1_FU2E9ES3E3HCVYY.gif" width="48" height="53" style="border: 1px solid rgb(222, 226, 230); margin-bottom: 0.5rem; height: auto !important;"></span>
         <h2>🇨🇦28圈APP业界顶尖平台🇨🇦</h2>
-        <h3>💥零鲨鱼、信誉，实力平台、担保全额账单💥</h3>
-        <b>公平、公正、安全、信誉为服务宗旨！超低门槛会员活动，超高流水返点福利待遇<br />
-        <span style="color: #f51f17"><strong>诚招代理、上级稳定永不失联、茶水红包、团队待遇好做你指路明灯</span></strong><br />
-            <h2><span style="color: #1c200a46">⭐️不干怎么住别墅 不干怎么睡嫩模⭐️</span></h2>     
+        <h4>💥零鲨鱼、信誉，实力平台、担保全额账单💥</h4>
+        <span style="color: #f51f17"><strong>诚招代理、上级稳定永不失联、茶水红包、团队待遇高</span></strong><br />
+            <h3><span style="color: #1c200a46">⭐️不干怎么住别墅 不干怎么睡嫩模⭐️</span></h3>     
 
         <div>      
         <span class="x4" style="padding: 20px 20px 20px;">
@@ -33,10 +32,10 @@
         <span class="x4" style="padding: 20px 20px 20px;">
         <p class="title"><!--图标--> <img src="https://app.qingdaoshibei.com/home/logo.png" alt="" align="center" height="80px">
         </p><span class="x12 text-center"><table class="table ijp"><tbody><tr><td class="text-center" valign="middle">
-        <!--标题--> <strong style="color:#6314e4;" class="text-big">旺旺聊天下载</strong></td></tr></tbody></table></div><div class="x6"><!--链接地址--> <a target="_blank" href="http://www.wangwangabc.com/desktop" rel="nofollow" class="button button-big button-block bg-dot margin-top text-center"> <strong>点击下载旺旺聊天</strong></a> <a target="_blank" href="" rel="nofollow" class="button button-big button-block bg-dot margin-top text-center"></a> <a target="_blank" href="h" rel="nofollow" class="button button-big button-block bg-yellow margin-top text-center"> <strong>添加旺旺：653761</strong></a></div><div class="x6"> <a target="_blank" href="" rel="nofollow" class="button button-big button-block bg-blue margin-top text-center"> <strong>早加入、早赚钱、心动不如行动！</strong></a> <a target="_blank" href="hte" rel="nofollow" class="button button-big button-block bg-blue margin-top text-center"> </a> <a target="_blank" href="htt23" rel="nofollow" class="button button-big button-block bg-main margin-top text-center"> <strong>认准神奇：653761</strong></a> </span>        
+        <!--标题--> <strong style="color:#6314e4;" class="text-big">旺旺聊天APP</strong></td></tr></tbody></table></div><div class="x6"><!--链接地址--> <a target="_blank" href="http://www.wangwangabc.com/desktop" rel="nofollow" class="button button-big button-block bg-dot margin-top text-center"> <strong>点击下载旺旺聊天</strong></a> <a target="_blank" href="" rel="nofollow" class="button button-big button-block bg-dot margin-top text-center"></a> <a target="_blank" href="h" rel="nofollow" class="button button-big button-block bg-yellow margin-top text-center"> <strong>添加旺旺：653761</strong></a></div><div class="x6"> <a target="_blank" href="" rel="nofollow" class="button button-big button-block bg-blue margin-top text-center"> <strong>早加入、早赚钱、心动不如行动！</strong></a> <a target="_blank" href="hte" rel="nofollow" class="button button-big button-block bg-blue margin-top text-center"> </a> <a target="_blank" href="htt23" rel="nofollow" class="button button-big button-block bg-main margin-top text-center"> <strong>认准神奇：653761</strong></a> </span>        
                             
         </div>
       </body>
     </html>
-</body>
+</body> 
 </html>
