--- a/shenqi28.html
+++ b/shenqi28.html
@@ -7,10 +7,10 @@
     <title>28圈诚招代理</title>
 </head>
 <body>
-</a><div class="content" style="/* 图片2 */	  background: url(https://dlglq.github.io/0450.gif) no-repeat;	  background-size:100% 100%;	  "><a href="https://28q09.com/pc/index.html">
+</a><div class="content" style="/* 图片2 */	  background: url(https://dlglq.github.io/0450.gif) no-repeat;	  background-size:100% 100%;	  "><a href="https://teqpromo.uztoh.com/join/24M6K823">
   <!-- 图片3 --> <img style="height: 65px;;" src="https://dlglq.github.io/0450.gif" width="100%"> </a> </div>
 
-</a><div class="content" style="/* 图片2 */	  background: url(https://dlglq.github.io/044475.png) no-repeat;	  background-size:100% 100%;	  "><a href="https://28q09.com/pc/index.html">
+</a><div class="content" style="/* 图片2 */	  background: url(https://dlglq.github.io/044475.png) no-repeat;	  background-size:100% 100%;	  "><a href="https://teqpromo.uztoh.com/join/24M6K823">
 <!-- 图片3 --> <img style="height: 70px;;" src="https://dlglq.github.io/0460.gif" width="100%"> </a> </div>
 
   <div>
@@ -32,7 +32,7 @@
         <span class="x4" style="padding: 20px 20px 20px;">
         <p class="title"><!--图标--> <img src="https://app.qingdaoshibei.com/home/logo.png" alt="" align="center" height="80px">
         </p><span class="x12 text-center"><table class="table ijp"><tbody><tr><td class="text-center" valign="middle">
-        <!--标题--> <strong style="color:#6314e4;" class="text-big">旺旺聊天APP</strong></td></tr></tbody></table></div><div class="x6"><!--链接地址--> <a target="_blank" href="http://www.wangwangabc.com/desktop" rel="nofollow" class="button button-big button-block bg-dot margin-top text-center"> <strong>点击下载旺旺聊天</strong></a> <a target="_blank" href="" rel="nofollow" class="button button-big button-block bg-dot margin-top text-center"></a> <a target="_blank" href="h" rel="nofollow" class="button button-big button-block bg-yellow margin-top text-center"> <strong>添加旺旺：653761</strong></a></div><div class="x6"> <a target="_blank" href="" rel="nofollow" class="button button-big button-block bg-blue margin-top text-center"> <strong>早加入、早赚钱、心动不如行动！</strong></a> <a target="_blank" href="hte" rel="nofollow" class="button button-big button-block bg-blue margin-top text-center"> </a> <a target="_blank" href="htt23" rel="nofollow" class="button button-big button-block bg-main margin-top text-center"> <strong>认准神奇：653761</strong></a> </span>        
+        <!--标题--> <strong style="color:#6314e4;" class="text-big">旺旺聊天APP</strong></td></tr></tbody></table></div><div class="x6"><!--链接地址--> <a target="_blank" href="http://www.wangwangabc.com/desktop" rel="nofollow" class="button button-big button-block bg-dot margin-top text-center"> <strong>点击下载旺旺聊天</strong></a> <a target="_blank" href="" rel="nofollow" class="button button-big button-block bg-dot margin-top text-center"></a> <a target="_blank" href="h" rel="nofollow" class="button button-big button-block bg-yellow margin-top text-center"> <strong>添加旺旺：653761</strong></a></div><div class="x6"> <a target="_blank" href="" rel="nofollow" class="button button-big button-block bg-blue margin-top text-center"> <strong>早加入、早赚钱！</strong></a> <a target="_blank" href="hte" rel="nofollow" class="button button-big button-block bg-blue margin-top text-center"> </a> <a target="_blank" href="htt23" rel="nofollow" class="button button-big button-block bg-main margin-top text-center"> <strong>认准神奇：653761</strong></a> </span>        
                             
         </div>
       </body>
