--- a/shenqi28.html
+++ b/shenqi28.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 </a><div class="content" style="/* 图片2 */	  background: url(https://dlglq.github.io/0450.gif) no-repeat;	  background-size:100% 100%;	  "><a href="https://teqpromo.uztoh.com/join/24M6K823">
-  <!-- 图片3 --> <img style="height: 65px;;" src="https://dlglq.github.io/0450.gif" width="100%"> </a> </div>
+  <!-- 图片3 --> <img style="height: 55px;;" src="https://dlglq.github.io/0450.gif" width="550"> </a> </div>
 
 </a><div class="content" style="/* 图片2 */	  background: url(https://dlglq.github.io/044475.png) no-repeat;	  background-size:100% 100%;	  "><a href="https://teqpromo.uztoh.com/join/24M6K823">
 <!-- 图片3 --> <img style="height: 70px;;" src="https://dlglq.github.io/0460.gif" width="100%"> </a> </div>
