--- a/shenqi28.html
+++ b/shenqi28.html
@@ -16,19 +16,18 @@
   <div>
         <a href="https://teqpromo.uztoh.com/join/24M6K823"
           ><img
-          style="width: 100%; height: auto"src="jpg/01.jpg"alt=""0"/></a> 
-          <span data-toggle="lightbox" data-gallery="entry-gallery"><img src="http://xkbcw.lol/upload/attach/202207/1_FU2E9ES3E3HCVYY.gif" width="48" height="53" style="border: 1px solid rgb(222, 226, 230); margin-bottom: 0.5rem; height: auto !important;"></span><b>早加入、早赚钱、心动不如行动！</b><span data-toggle="lightbox" data-gallery="entry-gallery"><img src="http://xkbcw.lol/upload/attach/202207/1_FU2E9ES3E3HCVYY.gif" width="48" height="53" style="border: 1px solid rgb(222, 226, 230); margin-bottom: 0.5rem; height: auto !important;"></span>
-        <h2>🇨🇦28圈APP业界顶尖平台🇨🇦</h2>
-        <h4>💥零鲨鱼、信誉，实力平台、担保全额账单💥</h4>
+          style="width: 100%; height: auto"src="https://dlglq.github.io/00012.png"alt=""0"/></a> 
+          
+          <a href="https://teqpromo.uztoh.com/join/24M6K823"
+          ><img
+          style="width: 100%; height: auto"src=""alt="https://dlglq.github.io/044421.png"0"/></a>         
+
+
+        <span data-toggle="lightbox" data-gallery="entry-gallery"><img src="http://xkbcw.lol/upload/attach/202207/1_FU2E9ES3E3HCVYY.gif" width="48" height="53" style="border: 1px solid rgb(222, 226, 230); margin-bottom: 0.5rem; height: auto !important;"></span><b>早加入、早赚钱、心动不如行动！</b><span data-toggle="lightbox" data-gallery="entry-gallery"><img src="http://xkbcw.lol/upload/attach/202207/1_FU2E9ES3E3HCVYY.gif" width="48" height="53" style="border: 1px solid rgb(222, 226, 230); margin-bottom: 0.5rem; height: auto !important;"></span>
         <span style="color: #f51f17"><strong>诚招代理、上级稳定永不失联、茶水红包、团队待遇高</span></strong><br />
             <h3><span style="color: #1c200a46">⭐️不干怎么住别墅 不干怎么睡嫩模⭐️</span></h3>     
 
-        <div>      
-        <span class="x4" style="padding: 20px 20px 20px;">
-        <p class="title"><!--图标--> <img src="http://28qyl.com/img/28loge.png?v=1" alt="" align="center" height="80px">
-        </p><span class="x12 text-center"><table class="table ijp"><tbody><tr><td class="text-center" valign="middle">
-        <!--标题--> <strong style="color:#6314e4;" class="text-big">28圈注册领福利</strong></td></tr></tbody></table></div><div class="x6"><!--链接地址--> <a target="_blank" href="https://teqpromo.uztoh.com/join/24M6K823" rel="nofollow" class="button button-big button-block bg-dot margin-top text-center"> <strong>注册地址</strong></a> <a target="_blank" href="https://teqpromo.uztoh.com/join/24M6K823" rel="nofollow" class="button button-big button-block bg-dot margin-top text-center"></a> <a target="_blank" href="https://teqpromo.uztoh.com/join/24M6K823" rel="nofollow" class="button button-big button-block bg-yellow margin-top text-center"> <strong>安卓手机端</strong></a></div><div class="x6"> <a target="_blank" href="https://h5.28quan19.com/home" rel="nofollow" class="button button-big button-block bg-blue margin-top text-center"> <strong>H5登入</strong></a> <a target="_blank" href="https://h5.28quan19.com/home" rel="nofollow" class="button button-big button-block bg-blue margin-top text-center"> </a> <a target="_blank" href="https://teqpromo.uztoh.com/join/24M6K823" rel="nofollow" class="button button-big button-block bg-main margin-top text-center"> <strong>苹果手机端</strong></a> </span>
-                
+        <div>            
         <span class="x4" style="padding: 20px 20px 20px;">
         <p class="title"><!--图标--> <img src="https://app.qingdaoshibei.com/home/logo.png" alt="" align="center" height="80px">
         </p><span class="x12 text-center"><table class="table ijp"><tbody><tr><td class="text-center" valign="middle">
