--- a/shenqi28.html
+++ b/shenqi28.html
@@ -18,20 +18,18 @@
           ><img
           style="width: 100%; height: auto"src="https://dlglq.github.io/00012.png"alt=""0"/></a> 
           
-          <a href="https://teqpromo.uztoh.com/join/24M6K823"
+         <a href="https://teqpromo.uztoh.com/join/24M6K823"
           ><img
-          style="width: 100%; height: auto"src=""alt="https://dlglq.github.io/044421.png"0"/></a>         
+          style="width: 100%; height: auto"src="https://dlglq.github.io/044421.png"alt=""0"/></a>         
 
-
-        <span data-toggle="lightbox" data-gallery="entry-gallery"><img src="http://xkbcw.lol/upload/attach/202207/1_FU2E9ES3E3HCVYY.gif" width="48" height="53" style="border: 1px solid rgb(222, 226, 230); margin-bottom: 0.5rem; height: auto !important;"></span><b>早加入、早赚钱、心动不如行动！</b><span data-toggle="lightbox" data-gallery="entry-gallery"><img src="http://xkbcw.lol/upload/attach/202207/1_FU2E9ES3E3HCVYY.gif" width="48" height="53" style="border: 1px solid rgb(222, 226, 230); margin-bottom: 0.5rem; height: auto !important;"></span>
-        <span style="color: #f51f17"><strong>诚招代理、上级稳定永不失联、茶水红包、团队待遇高</span></strong><br />
+          <span style="color: #f51f17"><strong>诚招代理、上级稳定永不失联、茶水红包、团队待遇高</span></strong><br />
             <h3><span style="color: #1c200a46">⭐️不干怎么住别墅 不干怎么睡嫩模⭐️</span></h3>     
 
-        <div>            
-        <span class="x4" style="padding: 20px 20px 20px;">
-        <p class="title"><!--图标--> <img src="https://app.qingdaoshibei.com/home/logo.png" alt="" align="center" height="80px">
-        </p><span class="x12 text-center"><table class="table ijp"><tbody><tr><td class="text-center" valign="middle">
-        <!--标题--> <strong style="color:#6314e4;" class="text-big">旺旺聊天APP</strong></td></tr></tbody></table></div><div class="x6"><!--链接地址--> <a target="_blank" href="http://www.wangwangabc.com/desktop" rel="nofollow" class="button button-big button-block bg-dot margin-top text-center"> <strong>点击下载旺旺聊天</strong></a> <a target="_blank" href="" rel="nofollow" class="button button-big button-block bg-dot margin-top text-center"></a> <a target="_blank" href="h" rel="nofollow" class="button button-big button-block bg-yellow margin-top text-center"> <strong>添加旺旺：653761</strong></a></div><div class="x6"> <a target="_blank" href="" rel="nofollow" class="button button-big button-block bg-blue margin-top text-center"> <strong>早加入、早赚钱！</strong></a> <a target="_blank" href="hte" rel="nofollow" class="button button-big button-block bg-blue margin-top text-center"> </a> <a target="_blank" href="htt23" rel="nofollow" class="button button-big button-block bg-main margin-top text-center"> <strong>认准神奇：653761</strong></a> </span>        
+         <div>            
+          <span class="x4" style="padding: 20px 20px 20px;">
+          <p class="title"><!--图标--> <img src="https://app.qingdaoshibei.com/home/logo.png" alt="" align="center" height="80px">
+          </p><span class="x12 text-center"><table class="table ijp"><tbody><tr><td class="text-center" valign="middle">
+          <!--标题--> <strong style="color:#6314e4;" class="text-big">旺旺聊天APP</strong></td></tr></tbody></table></div><div class="x6"><!--链接地址--> <a target="_blank" href="http://www.wangwangabc.com/desktop" rel="nofollow" class="button button-big button-block bg-dot margin-top text-center"> <strong>点击下载旺旺聊天</strong></a> <a target="_blank" href="" rel="nofollow" class="button button-big button-block bg-dot margin-top text-center"></a> <a target="_blank" href="h" rel="nofollow" class="button button-big button-block bg-yellow margin-top text-center"> <strong>添加旺旺：653761</strong></a></div><div class="x6"> <a target="_blank" href="" rel="nofollow" class="button button-big button-block bg-blue margin-top text-center"> <strong>早加入、早赚钱！</strong></a> <a target="_blank" href="hte" rel="nofollow" class="button button-big button-block bg-blue margin-top text-center"> </a> <a target="_blank" href="htt23" rel="nofollow" class="button button-big button-block bg-main margin-top text-center"> <strong>认准神奇：653761</strong></a> </span>        
                             
         </div>
       </body>
