--- a/shenqi28.html
+++ b/shenqi28.html
@@ -12,7 +12,7 @@
           <!-- 图片3 --> <img style="height: 70px;;" src="https://dlglq.github.io/0480.gif" width="100%"> </a> </div>
   
   <div>        
-         <a href="https://teqpromo.uztoh.com/join/24M6K823"><img style="width: 100%; height: auto" src="https://dlglq.github.io/044421.png" alt="" 0"=""></a>   </div>        
+         <a href="https://teqpromo.uztoh.com/join/24M6K823"><img style="width: 100%; height: auto" src="044421.png" alt="" 0"=""></a>   </div>        
 
          <h3><span style="color: #350acfe5">⭐️诚招代理、上级稳定、茶水高、无限扶持⭐️</span></h3> 
 
